Fixing some formatting on mobile issues.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ body
 #prior-search-area{
 
 border: 1px solid blue;
+margin: 5px;
 
 }
 
